--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
+/* Performance animations */
+@import './components/performance/performance-animations.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/* Definition of the design system. All colors, gradients, fonts, etc should be defined here. 
+/* Definition of the design system. All colors, gradients, fonts, etc should be defined here.
 All colors MUST be HSL.
 */
 
