--- a/src/index.css
+++ b/src/index.css
@@ -146,11 +146,21 @@ All colors MUST be HSL.
 }
 
 @layer base {
+  html {
+    overflow-y: scroll;
+  }
+
+  html body[data-scroll-locked] {
+    margin-right: 0 !important;
+    padding-right: 0 !important;
+  }
+
   * {
     @apply border-border;
   }
 
   body {
     @apply bg-background text-foreground;
+    scrollbar-gutter: stable both-edges;
   }
 }
